trying to fix mobile white space

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -2,6 +2,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
+    overflow-x: hidden;
 }
 
 .headerImage {
@@ -25,7 +26,6 @@ header {
 
     @media (max-width: 580px) {
         left: -150px;
-        right: 0;
         background: rgba(255, 255, 255, 0.7);
     }
 
