--- a/styles/sass/_services.scss
+++ b/styles/sass/_services.scss
@@ -2,6 +2,7 @@
 
 .services {
     background: $background;
+    overflow-x: hidden;
 }
 
 .serviceInfo {
